--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -1,114 +1,117 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
-  <title>Block_Footer.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <!-- Open Sans Light -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> -->
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
+	<title>Block_Footer.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-    }
-  </style>
+	<style>
+		body {
+			margin: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
+	</style>
 
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="footer.css">
 
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
-  <script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
+	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
+
 <body>
-  <div id="Footer-div-src">
-  <!-- Úvodný blok -->
-    <div class="footer-hero-header">
-        <div class="footer-hero-content" id="id-footer-hero-content">
-        <h2 lang-code="09001">.Váš partner v inžinierstve a IT</h2>
-        <p  lang-code="09002">.Kde sa inovácie stretávajú s odbornosťou</p>
-        </div>
-    </div>
+	<div id="Footer-div-src">
+		<!-- Úvodný blok -->
+		<div class="footer-hero-header">
+			<div class="footer-line"></div>
+			<div class="footer-hero-content" id="id-footer-hero-content">
+				<h2 lang-code="09001">.Váš partner v inžinierstve a IT</h2>
+				<p lang-code="09002">.Kde sa inovácie stretávajú s odbornosťou</p>
+			</div>
+		</div>
 
-  <!-- Footer -->
-    <footer class="footer">
-      <div class="footer-grid">
+		<!-- Footer -->
+		<footer class="footer">
+			<div class="footer-grid">
 
-        <!-- Logo -->
-        <div class="footer-column footer-logo">
-          <div class="footer-logo-box">
-            <a href="index.html">
-              <img src="media/logo-biela-18px-enitech.png" alt="logo Enitech">
-            </a>
-          </div>
-        </div>
+				<!-- Logo -->
+				<div class="footer-column footer-logo">
+					<div class="footer-logo-box">
+						<a href="index.html">
+							<img src="media/logo-biela-18px-enitech.png" alt="logo Enitech">
+						</a>
+					</div>
+				</div>
 
-        <!-- Menu -->
-        <div class="footer-column">
-          <h4>Menu</h4>
-          <ul>
-            <li><a href="indexOnas.html#top" lang-code="00101">.O nás</a></li>
-            <li><a href="indexEngin.html#top" lang-code="00102">.Inžiniering</a></li>
-            <li><a href="indexIT.html#top" lang-code="00103">.IT služby</a></li>
-            <li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li>
-            <li><a href="indexRef.html#top" lang-code="00105">.Referencie</a></li>
-            <li><a href="indexKariera.html#top" lang-code="00106">.Kariéra</a></li>
-            <li><a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a></li>
-          </ul>
-        </div>
+				<!-- Menu -->
+				<div class="footer-column">
+					<h4>Menu</h4>
+					<ul>
+						<li><a href="indexOnas.html#top" lang-code="00101">.O nás</a></li>
+						<li><a href="indexEngin.html#top" lang-code="00102">.Inžiniering</a></li>
+						<li><a href="indexIT.html#top" lang-code="00103">.IT služby</a></li>
+						<li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li>
+						<li><a href="indexRef.html#top" lang-code="00105">.Referencie</a></li>
+						<li><a href="indexKariera.html#top" lang-code="00106">.Kariéra</a></li>
+						<li><a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a></li>
+					</ul>
+				</div>
 
-        <!-- Kariéra -->
-        <div class="footer-column">
-          <h4 lang-code="00106">.Kariéra</h4>
-          <ul id="id-ul-ponuky">
-            <li lang-code="09003">.Načítavam ponuky...</li>
-          </ul>
-        </div>
+				<!-- Kariéra -->
+				<div class="footer-column">
+					<h4 lang-code="00106">.Kariéra</h4>
+					<ul id="id-ul-ponuky">
+						<li lang-code="09003">.Načítavam ponuky...</li>
+					</ul>
+				</div>
 
-        <!-- Kontakt -->
-        <div class="footer-column">
-          <h4 lang-code="00107">.Kontakt</h4>
-          <p>
-            Enitech s. r. o.<br>
-            Dukelská štvrť 1404/613<br>
-            018 41 Dubnica nad Váhom<br>
-            Slovenská republika
-          </p>
-          <p class="footer-email-link">📧 <a href="mailto:office@enitech.sk">office@enitech.sk</a></p>
-        </div>
+				<!-- Kontakt -->
+				<div class="footer-column">
+					<h4 lang-code="00107">.Kontakt</h4>
+					<p>
+						Enitech s. r. o.<br>
+						Dukelská štvrť 1404/613<br>
+						018 41 Dubnica nad Váhom<br>
+						Slovenská republika
+					</p>
+					<p class="footer-email-link">📧 <a href="mailto:office@enitech.sk">office@enitech.sk</a></p>
+				</div>
 
-      </div>
+			</div>
 
-      <div class="footer-copyright">
-        <span>
-          © 2025 <a href="#">Enitech</a> | Inspired by <a href="http://marketingart.sk/" target="_blank">Marketing Art</a>
-        </span>
-        <a href="#" class="footer-back-to-top">^</a>
-      </div>
-    </footer>
-    <script>
-    </script>
-  </div>
+			<div class="footer-copyright">
+				<span>
+					© 2025 <a href="#">Enitech</a> | Inspired by <a href="http://marketingart.sk/" target="_blank">Marketing Art</a>
+				</span>
+				<a href="#" class="footer-back-to-top">^</a>
+			</div>
+		</footer>
+		<script>
+		</script>
+	</div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      // Načítanie prekladov po načítaní DOM
-      await Footer_fill_ponuky();
-      await LoadTranslations('translations00.txt');
-      await LoadTranslations('translations01.txt');
-      await LoadTranslations('translations09-foot.txt');
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame); // Môžeš počkať na ďalší repaint, ak chceš jemnejší prechod (voliteľné)
-      // Spustenie animácie
-      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); // znak # znamená: "element s id"
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
-    });
-  </script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			// Načítanie prekladov po načítaní DOM
+			await Footer_fill_ponuky();
+			await LoadTranslations('translations00.txt');
+			await LoadTranslations('translations01.txt');
+			await LoadTranslations('translations09-foot.txt');
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame); // Môžeš počkať na ďalší repaint, ak chceš jemnejší prechod (voliteľné)
+			// Spustenie animácie
+			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); // znak # znamená: "element s id"
+			Animator.registerAll(".footer-line", "animate-width-grow");
+			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+		});
+	</script>
 
 </body>
+
 </html>
