--- a/Block_Onas1.html
+++ b/Block_Onas1.html
@@ -30,7 +30,7 @@
       <div class="onas1-content">
         <div class="onas1-left">
           <div class="onas1-left-inner">
-            <img src="media/enitech-logo-modre.avif" alt="ENITECH logo" />
+            <img src="media/view-futuristic-classroom-students.avif" alt="Obrazok 1" />
           </div>
         </div>
 
