--- a/Block_Onas2.html
+++ b/Block_Onas2.html
@@ -48,7 +48,7 @@
 
         <div class="onas2-right">
           <div class="onas2-right-inner">
-            <img src="media/enitech-logo-modre.avif" alt="ENITECH logo" />
+            <img src="media/two-successful-male-colleague-giving-high-five-office.avif" alt="Obrazok 2" />
           </div>
         </div>
       </div>
