--- a/indexIT.html
+++ b/indexIT.html
@@ -1,99 +1,115 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
-  <title>indexIT.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <style> html { scroll-behavior: smooth; } </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
+	<title>indexIT.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+	</style>
 
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <link rel="stylesheet" href="root.css">
-  <style>
-    body { visibility: hidden; margin: 0; font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif; } /*visibility sa vrati az po nacitani*/
-  </style>
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+	<link rel="stylesheet" href="root.css">
+	<style>
+		body {
+			visibility: hidden;
+			margin: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
 
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="UvodHero.css">
-  <link rel="stylesheet" href="it1.css">
-  <link rel="stylesheet" href="it2.css">
-  <link rel="stylesheet" href="it3.css">
-  <link rel="stylesheet" href="it4.css">
-  <link rel="stylesheet" href="footer.css">
+		/*visibility sa vrati az po nacitani*/
+	</style>
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
-  <script src="Language.js" defer></script>  <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-  <script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-  <script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="UvodHero.css">
+	<link rel="stylesheet" href="it1.css">
+	<link rel="stylesheet" href="it2.css">
+	<link rel="stylesheet" href="it3.css">
+	<link rel="stylesheet" href="it4.css">
+	<link rel="stylesheet" href="it5.css">
+	<link rel="stylesheet" href="footer.css">
+
+	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
+	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
+	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
+	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
 
 <body>
-  <div id="top"></div>
-  <div id="Menu-div-dst">
-  </div>
+	<div id="top"></div>
+	<div id="Menu-div-dst">
+	</div>
 
-  <div id="IT-div-dst">
-  </div>
+	<div id="IT-div-dst">
+	</div>
 
-  <div id="IT1-div-dst">
-  </div>
+	<div id="IT1-div-dst">
+	</div>
 
-  <div id="IT2-div-dst">
-  </div>
+	<div id="IT2-div-dst">
+	</div>
 
-  <div id="IT3-div-dst">
-  </div>
+	<div id="IT3-div-dst">
+	</div>
 
-  <div id="IT4-div-dst">
-  </div>
+	<div id="IT4-div-dst">
+	</div>
 
-  <div id="IT5-div-dst">
-  </div>
+	<div id="IT5-div-dst">
+	</div>
 
-  <div id="Footer-div-dst">
-  </div>
+	<div id="Footer-div-dst">
+	</div>
 
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
-  <script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-  
-  <script> 
-    async function loadDivBlocks() {
-      const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
-      const p2 = ImportDiv("Block_IT.html", "IT-div-src", "IT-div-dst");
-      const p3 = ImportDiv("Block_IT1.html", "IT1-div-src", "IT1-div-dst");
-      const p4 = ImportDiv("Block_IT2.html", "IT2-div-src", "IT2-div-dst");
-      const p5 = ImportDiv("Block_IT3.html", "IT3-div-src", "IT3-div-dst");
-      const p6 = ImportDiv("Block_IT4.html", "IT4-div-src", "IT4-div-dst");
-      const p7 = ImportDiv("Block_IT5.html", "IT5-div-src", "IT5-div-dst");
-      const p9 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4, p5, p6, p7, p9]); // vsetky mozu bezat paralelne
-    }
-    async function loadAllTranslations() {
-      const p1 = LoadTranslations('translations00.txt');
-      const p2 = LoadTranslations('translations02-it.txt');
-      const p3 = LoadTranslations('translations09-foot.txt');
-      await Promise.all([p1, p2, p3]);
-    }
-   </script>
+	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
-      await loadDivBlocks();
-      await new Promise(requestAnimationFrame);
-      await Footer_fill_ponuky();
-      await loadAllTranslations();
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame);
-      Animator.register("#IT_animate-id", "animate-slide-in-bounce");
-      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
-      Animator.registerAll(".it3-grid-item-line", "animate-width-grow"); // doprava rastuce ciary
-      restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
-    });    
-  </script>
+	<script>
+		async function loadDivBlocks() {
+			const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
+			const p2 = ImportDiv("Block_IT.html", "IT-div-src", "IT-div-dst");
+			const p3 = ImportDiv("Block_IT1.html", "IT1-div-src", "IT1-div-dst");
+			const p4 = ImportDiv("Block_IT2.html", "IT2-div-src", "IT2-div-dst");
+			const p5 = ImportDiv("Block_IT3.html", "IT3-div-src", "IT3-div-dst");
+			const p6 = ImportDiv("Block_IT4.html", "IT4-div-src", "IT4-div-dst");
+			const p7 = ImportDiv("Block_IT5.html", "IT5-div-src", "IT5-div-dst");
+			const p9 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+			await Promise.all([p1, p2, p3, p4, p5, p6, p7, p9]); // vsetky mozu bezat paralelne
+		}
+		async function loadAllTranslations() {
+			const p1 = LoadTranslations('translations00.txt');
+			const p2 = LoadTranslations('translations02-it.txt');
+			const p3 = LoadTranslations('translations09-foot.txt');
+			await Promise.all([p1, p2, p3]);
+		}
+	</script>
+
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+			await loadDivBlocks();
+			await new Promise(requestAnimationFrame);
+			await Footer_fill_ponuky();
+			await loadAllTranslations();
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame);
+			Animator.register("#IT_animate-id", "animate-slide-in-bounce");
+			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			Animator.registerAll(".it1-line", "animate-width-grow");
+			Animator.registerAll(".it2-line", "animate-width-grow");
+			Animator.registerAll(".it3-line", "animate-width-grow");
+			Animator.registerAll(".it3-grid-item-line", "animate-width-grow"); // doprava rastuce ciary
+			Animator.registerAll(".footer-line", "animate-width-grow");
+			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
+			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+		});    
+	</script>
 </body>
-</html>
 
+</html>
