--- a/indexKariera.html
+++ b/indexKariera.html
@@ -84,6 +84,7 @@
 			await new Promise(requestAnimationFrame);
 			Animator.register("#kariera_animate-id", "animate-slide-in-bounce");
 			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			Animator.registerAll(".footer-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
 		});    
