--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -1,102 +1,112 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>indexKontakt.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="root.css">
-  <style>
-    body { visibility: hidden; margin: 0; font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif; } /*visibility sa vrati az po nacitani*/
-  </style>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>indexKontakt.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<link rel="stylesheet" href="root.css">
+	<style>
+		body {
+			visibility: hidden;
+			margin: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
 
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="kontakt1.css">
-  <link rel="stylesheet" href="formular.css">  
-  <link rel="stylesheet" href="kontakt2.css">
-  <link rel="stylesheet" href="kontakt3.css">
-  <link rel="stylesheet" href="footer.css">
+		/*visibility sa vrati az po nacitani*/
+	</style>
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
-  <script src="Language.js" defer></script>
-  <script src="menu.js" defer></script>
-  <script src="animator.js" defer></script>
-  <script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="kontakt1.css">
+	<link rel="stylesheet" href="formular.css">
+	<link rel="stylesheet" href="kontakt2.css">
+	<link rel="stylesheet" href="kontakt3.css">
+	<link rel="stylesheet" href="footer.css">
+
+	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
+	<script src="Language.js" defer></script>
+	<script src="menu.js" defer></script>
+	<script src="animator.js" defer></script>
+	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
+
 <body>
-  <div id="top"></div>
-  <div id="Menu-div-dst">
-  </div>
+	<div id="top"></div>
+	<div id="Menu-div-dst">
+	</div>
 
-  <div id="Kontakt1-div-dst">
-  </div>
+	<div id="Kontakt1-div-dst">
+	</div>
 
-  <div id="Kontakt2-div-dst">
-  </div>
+	<div id="Kontakt2-div-dst">
+	</div>
 
-  <div id="Kontakt3-div-dst">
-  </div>
+	<div id="Kontakt3-div-dst">
+	</div>
 
-  <div id="Footer-div-dst">
-  </div>
+	<div id="Footer-div-dst">
+	</div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
-  <script src="scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-  <script src="kontakt1.js" type="text/javascript"></script>
-  <script src="kontakt2_leaflet.js" type="text/javascript" defer></script>
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="kontakt1.js" type="text/javascript"></script>
+	<script src="kontakt2_leaflet.js" type="text/javascript" defer></script>
 
-  <script> 
-    async function loadDivBlocks() {
-      const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
-      const p2 = ImportDiv("Block_Kontakt1.html", "Kontakt1-div-src", "Kontakt1-div-dst");
-      const p3 = ImportDiv("Block_Kontakt2.html", "kontakt2-div-src", "Kontakt2-div-dst");
-      const p4 = ImportDiv("Block_Kontakt3.html", "Kontakt3-div-src", "Kontakt3-div-dst");
-      const p5 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4, p5]); // vsetky ImportDiv mozu bezat paralelne
-    }
-   </script>
+	<script>
+		async function loadDivBlocks() {
+			const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
+			const p2 = ImportDiv("Block_Kontakt1.html", "Kontakt1-div-src", "Kontakt1-div-dst");
+			const p3 = ImportDiv("Block_Kontakt2.html", "kontakt2-div-src", "Kontakt2-div-dst");
+			const p4 = ImportDiv("Block_Kontakt3.html", "Kontakt3-div-src", "Kontakt3-div-dst");
+			const p5 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+			await Promise.all([p1, p2, p3, p4, p5]); // vsetky ImportDiv mozu bezat paralelne
+		}
+	</script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      await loadDivBlocks() 
- 
-      await new Promise(requestAnimationFrame);
-      // Načítanie prekladov po načítaní DOM
-      await Footer_fill_ponuky();
-      await LoadTranslations('translations00.txt');
-      await LoadTranslations('translations05-kontakt.txt');
-      await LoadTranslations('translations09-foot.txt');
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame);
-      await kontakt1_addEventListeners();
-      await new Promise(requestAnimationFrame);
-      await kontakt2_leaflet_init_map_pobocky();
-      await new Promise(requestAnimationFrame);
-      Animator.register("#id-kontakt1-animate-content", "animate-slide-in-bounce");
-      Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
-      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
-      // *** nový blok: oprava scrollu podľa hashu (ak je) ***
-      if (window.location.hash) {
-        const targetEl = document.querySelector(window.location.hash);
-        if (targetEl) {
-          await new Promise(requestAnimationFrame);
-          targetEl.scrollIntoView({ behavior: 'auto', block: 'start' });
-        // Posun o vysku menu (110px)
-          window.scrollBy(0, -parseInt(getComputedStyle(document.documentElement).getPropertyValue('--menu-height')) || 110);
-        }
-      }
-      highlightContactsFromHash();
-      // highlightContact('id-kontakt-Deak'); // aby prislusny <div id=""> zablikal
-      // highlightContact('id-kontakt-Kracala'); // aby prislusny <div id=""> zablikal
-      // highlightContact('id-kontakt-Ivaska'); // aby prislusny <div id=""> zablikal
-      restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-      document.body.style.visibility = "visible";  
-    });
-  </script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			await loadDivBlocks()
+
+			await new Promise(requestAnimationFrame);
+			// Načítanie prekladov po načítaní DOM
+			await Footer_fill_ponuky();
+			await LoadTranslations('translations00.txt');
+			await LoadTranslations('translations05-kontakt.txt');
+			await LoadTranslations('translations09-foot.txt');
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame);
+			await kontakt1_addEventListeners();
+			await new Promise(requestAnimationFrame);
+			await kontakt2_leaflet_init_map_pobocky();
+			await new Promise(requestAnimationFrame);
+			Animator.register("#id-kontakt1-animate-content", "animate-slide-in-bounce");
+			Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
+			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			Animator.registerAll(".footer-line", "animate-width-grow");
+			// *** nový blok: oprava scrollu podľa hashu (ak je) ***
+			if (window.location.hash) {
+				const targetEl = document.querySelector(window.location.hash);
+				if (targetEl) {
+					await new Promise(requestAnimationFrame);
+					targetEl.scrollIntoView({ behavior: 'auto', block: 'start' });
+					// Posun o vysku menu (110px)
+					window.scrollBy(0, -parseInt(getComputedStyle(document.documentElement).getPropertyValue('--menu-height')) || 110);
+				}
+			}
+			highlightContactsFromHash();
+			// highlightContact('id-kontakt-Deak'); // aby prislusny <div id=""> zablikal
+			// highlightContact('id-kontakt-Kracala'); // aby prislusny <div id=""> zablikal
+			// highlightContact('id-kontakt-Ivaska'); // aby prislusny <div id=""> zablikal
+			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
+			document.body.style.visibility = "visible";
+		});
+	</script>
 </body>
+
 </html>
