--- a/indexManage.html
+++ b/indexManage.html
@@ -1,89 +1,101 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
-  <title>indexManage.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <style> html { scroll-behavior: smooth; } </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
+	<title>indexManage.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<style>
+		html {
+			scroll-behavior: smooth;
+		}
+	</style>
 
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <link rel="stylesheet" href="root.css">
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
-    }
-    body { visibility: hidden; }
-  </style>
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="UvodHero.css">
-  <link rel="stylesheet" href="manage.css">
-  <link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+	<link rel="stylesheet" href="root.css">
+	<style>
+		body,
+		html {
+			margin: 0;
+			padding: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMConentLoaded-->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+		body {
+			visibility: hidden;
+		}
+	</style>
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="UvodHero.css">
+	<link rel="stylesheet" href="manage.css">
+	<link rel="stylesheet" href="footer.css">
+
+	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMConentLoaded-->
+	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
 </head>
+
 <body>
-  <div id="top"></div>
-  <div id="Menu-div-dst">
-  </div>
+	<div id="top"></div>
+	<div id="Menu-div-dst">
+	</div>
 
-  <div id="Management">
-    <section class="uvod-hero" style="background-image: url('media/young-entrepreneur-works-implementing-ai-brain-system-deep-learning.avif');">
-      <div class="uvod-hero-content" id="management_animate-id">
-        <h1 lang-code="06001">.Riadenie projektov</h1>
-        <p lang-code="06002">.Spoľahlivá a efektívna podpora v oblasti riadenia projektov doma aj v zahraničí.</p>
-      </div>
-    </section>
-  </div>
+	<div id="Management">
+		<section class="uvod-hero" style="background-image: url('media/young-entrepreneur-works-implementing-ai-brain-system-deep-learning.avif');">
+			<div class="uvod-hero-content" id="management_animate-id">
+				<h1 lang-code="06001">.Riadenie projektov</h1>
+				<p lang-code="06002">.Spoľahlivá a efektívna podpora v oblasti riadenia projektov doma aj v zahraničí.</p>
+			</div>
+		</section>
+	</div>
 
-  <div id="Manage-div-dst">
-  </div>
+	<div id="Manage-div-dst">
+	</div>
 
-  <div id="Footer-div-dst">
-  </div>
+	<div id="Footer-div-dst">
+	</div>
 
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
-  <script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-  <script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-  <script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
+	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 
-  <script> 
-    async function loadDivBlocks() {
-      const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
-      const p2 = ImportDiv ("Block_Manage.html", "Manage-div-src", "Manage-div-dst");
-      const p3 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3]); // vsetky mozu bezat paralelne
-    }
-    async function loadAllTranslations() {
-      const p1 = LoadTranslations('translations00.txt');
-      const p2 = LoadTranslations('translations06-manag.txt');
-      const p3 = LoadTranslations('translations09-foot.txt');
-      await Promise.all([p1, p2, p3]);
-    }
-   </script>
+	<script>
+		async function loadDivBlocks() {
+			const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
+			const p2 = ImportDiv("Block_Manage.html", "Manage-div-src", "Manage-div-dst");
+			const p3 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+			await Promise.all([p1, p2, p3]); // vsetky mozu bezat paralelne
+		}
+		async function loadAllTranslations() {
+			const p1 = LoadTranslations('translations00.txt');
+			const p2 = LoadTranslations('translations06-manag.txt');
+			const p3 = LoadTranslations('translations09-foot.txt');
+			await Promise.all([p1, p2, p3]);
+		}
+	</script>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      await loadDivBlocks();
-      await new Promise(requestAnimationFrame);
-      await Footer_fill_ponuky();
-      await loadAllTranslations();
-      await UpdateTexts();
-       // Spustenie animácie
-      Animator.register("#management_animate-id", "animate-slide-in-bounce");
-      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
-      Animator.register("#id-Manag_animate-line", "animate-width-grow"); // doprava rastuce ciary
-      restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
-    });
-  </script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			await loadDivBlocks();
+			await new Promise(requestAnimationFrame);
+			await Footer_fill_ponuky();
+			await loadAllTranslations();
+			await UpdateTexts();
+			// Spustenie animácie
+			Animator.registerAll(".footer-line", "animate-width-grow");
+			Animator.register("#management_animate-id", "animate-slide-in-bounce");
+			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			Animator.register("#id-Manag_animate-line", "animate-width-grow"); // doprava rastuce ciary
+			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
+			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+		});
+	</script>
 </body>
+
 </html>
