--- a/indexOnas.html
+++ b/indexOnas.html
@@ -1,91 +1,99 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
-  <title>indexOnas.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
-  <link rel="stylesheet" href="root.css">
-  <style>
-    body { visibility: hidden; margin: 0; font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif; } /*visibility sa vrati az po nacitani*/
-  </style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
+	<title>indexOnas.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
+	<link rel="stylesheet" href="root.css">
+	<style>
+		body {
+			visibility: hidden;
+			margin: 0;
+			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
+		}
 
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="UvodHero.css">
-  <link rel="stylesheet" href="uvod1.css">
-  <link rel="stylesheet" href="onas1.css">
-  <link rel="stylesheet" href="onas2.css">
-  <link rel="stylesheet" href="klienti.css">
-  <link rel="stylesheet" href="footer.css">
+		/*visibility sa vrati az po nacitani*/
+	</style>
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
-  <script src="Language.js" defer></script>  <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-  <script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-  <script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="UvodHero.css">
+	<link rel="stylesheet" href="uvod1.css">
+	<link rel="stylesheet" href="onas1.css">
+	<link rel="stylesheet" href="onas2.css">
+	<link rel="stylesheet" href="klienti.css">
+	<link rel="stylesheet" href="footer.css">
+
+	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
+	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
+	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
+	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
 
 <body>
-  <div id="top"></div>
-  <div id="Menu-div-dst">
-  </div>
+	<div id="top"></div>
+	<div id="Menu-div-dst">
+	</div>
 
-  <div id="UvodHero-div-dst">
-  </div>
+	<div id="UvodHero-div-dst">
+	</div>
 
-  <div id="Uvod1-div-dst">    
-  </div>
+	<div id="Uvod1-div-dst">
+	</div>
 
-  <div id="Onas1-div-dst">    
-  </div>
+	<div id="Onas1-div-dst">
+	</div>
 
-  <div id="Onas2-div-dst">    
-  </div>
+	<div id="Onas2-div-dst">
+	</div>
 
-  <div id="Klienti-div-dst">    
-  </div>
+	<div id="Klienti-div-dst">
+	</div>
 
-  <div id="Footer-div-dst">
-  </div>
+	<div id="Footer-div-dst">
+	</div>
 
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
-  <script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-  
-  <script> 
-    async function loadDivBlocks() {
-      const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
-      const p2 = ImportDiv("Block_Menu.html", "UvodHero-body-src", "UvodHero-div-dst");
-      const p3 = ImportDiv("Block_Uvod1.html", "Uvod1-div-src", "Uvod1-div-dst");
-      const p4 = ImportDiv("Block_Onas1.html", "Onas1-div-src", "Onas1-div-dst");
-      const p5 = ImportDiv("Block_Onas2.html", "Onas2-div-src", "Onas2-div-dst");
-      const p6 = ImportDiv("Block_Klienti.html", "Klienti-div-src", "Klienti-div-dst");
-      const p7 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-      await Promise.all([p1, p2, p3, p4, p5, p6, p7]); // vsetky ImportDiv mozu bezat paralelne
-    }
-   </script>
+	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
-      await loadDivBlocks();
+	<script>
+		async function loadDivBlocks() {
+			const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
+			const p2 = ImportDiv("Block_Menu.html", "UvodHero-body-src", "UvodHero-div-dst");
+			const p3 = ImportDiv("Block_Uvod1.html", "Uvod1-div-src", "Uvod1-div-dst");
+			const p4 = ImportDiv("Block_Onas1.html", "Onas1-div-src", "Onas1-div-dst");
+			const p5 = ImportDiv("Block_Onas2.html", "Onas2-div-src", "Onas2-div-dst");
+			const p6 = ImportDiv("Block_Klienti.html", "Klienti-div-src", "Klienti-div-dst");
+			const p7 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+			await Promise.all([p1, p2, p3, p4, p5, p6, p7]); // vsetky ImportDiv mozu bezat paralelne
+		}
+	</script>
 
-      await new Promise(requestAnimationFrame); 
-      await Footer_fill_ponuky();
-      await LoadTranslations('translations00.txt');
-      await LoadTranslations('translations01-engin.txt');
-      await LoadTranslations('translations09-foot.txt');
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame);
-      Animator.register("#uvod-hero_animate-id", "animate-slide-in-bounce");
-      Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); 
-      Animator.register("#id-klienti-animate", "animate-rotateFlipIn"); 
-      Animator.registerAll(".onas1-header-line", "animate-width-grow");
-      restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
-    });    
-  </script>
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+			await loadDivBlocks();
+
+			await new Promise(requestAnimationFrame);
+			await Footer_fill_ponuky();
+			await LoadTranslations('translations00.txt');
+			await LoadTranslations('translations01-engin.txt');
+			await LoadTranslations('translations09-foot.txt');
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame);
+			Animator.register("#uvod-hero_animate-id", "animate-slide-in-bounce");
+			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
+			Animator.register("#id-klienti-animate", "animate-rotateFlipIn");
+			Animator.registerAll(".onas1-header-line", "animate-width-grow");
+			Animator.registerAll(".footer-line", "animate-width-grow");
+			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
+			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+		});    
+	</script>
 </body>
-</html>
 
+</html>
